[tool.poetry]
name = "luih"
version = "0.1.0"
description = "un paquete de prueba con luih"
authors = ["Emilio Vega <jesusvegamoreno@gmail.com>"]
readme = "README.md"
packages = [{include = "luih", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
